--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+            <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+            <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+
+            <title>Word Network | Davit G</title>
+            <meta name="title" content="Word Network | Davit G" />
+            <meta name="description" content="Network of word associations, rendered in the browser." />
+
+            <meta property="og:type" content="website" />
+            <meta property="og:url" content="https://word-network.davitg.com" />
+            <meta property="og:title" content="Word Network | Davit G" />
+            <meta property="og:description" content="Network of word associations, rendered in the browser." />
+
+            <meta property="twitter:card" content="summary_large_image" />
+            <meta property="twitter:url" content="https://word-network.davitg.com" />
+            <meta property="twitter:title" content="Word Network | Davit G" />
+            <meta property="twitter:description" content="Network of word associations, rendered in the browser." />
+
+            <script async defer data-website-id="73cb08d8-368c-4bea-90a3-ad707c4063ae" src="https://analytics.tierify.app/overseer.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
